kubernetes/flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: ingress-basic
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - port: 8000
